<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        app:showAsAction="always"
        android:title="@string/action_refresh_list" />

    <item
        android:id="@+id/action_add_list_lember"
        android:icon="@drawable/ic_menus_add_member"
        app:showAsAction="never"
        android:title="@string/action_add_member" />

    <item
        android:id="@+id/action_show_statistic"
        app:showAsAction="never"
        android:title="@string/action_show_list_statistic" />

    <item
        android:id="@+id/action_delete_list"
        android:icon="@drawable/ic_menu_delete"
        app:showAsAction="never"
        android:title="@string/action_delete_list" />

</menu>