<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="?attr/dialogPreferredPadding">

    <TextView
        android:id="@+id/prompt_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/windowTitleStyle"
        android:text="@string/prompt_createList"/>

    <!--List Name Label-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/dialogPreferredPadding"
        android:layout_marginBottom="?attr/dialogPreferredPadding">

        <EditText android:id="@+id/input_listName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/prompt_listName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|right"
        android:layoutDirection="locale"
        android:orientation="horizontal"
        android:paddingTop="4dp">

        <Button
            android:id="@+id/action_negativeButton"
            style="?attr/buttonBarNegativeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_cancel"/>

        <Button
            android:id="@+id/action_positiveButton"
            style="?attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_confirm"/>

    </android.support.v7.widget.ButtonBarLayout>

</LinearLayout>