<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="?attr/dialogPreferredPadding">

    <TextView
        android:id="@+id/prompt_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/windowTitleStyle"
        android:text="@string/prompt_add_member_header"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/dialogPreferredPadding"
        android:layout_marginBottom="?attr/dialogPreferredPadding">

        <EditText android:id="@+id/input_member_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_member_email" />
    </android.support.design.widget.TextInputLayout>

    <ListView
        android:id="@+id/list_group_members"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="?attr/dialogPreferredPadding"
        android:layout_marginBottom="?attr/dialogPreferredPadding"
        android:elevation="-10dp">

    </ListView>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|right"
        android:layoutDirection="locale"
        android:orientation="horizontal"
        android:paddingTop="4dp">

        <Button
            android:id="@+id/action_close_button"
            style="?attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_close"/>

    </android.support.v7.widget.ButtonBarLayout>

</LinearLayout>