<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/login_activity_vertical_margin"
    android:layout_marginBottom="@dimen/login_activity_vertical_margin"
    android:layout_marginRight="@dimen/login_activity_horizontal_margin"
    android:layout_marginLeft="@dimen/login_activity_horizontal_margin">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/listappbrilhoexterno"/>

    <!--  Email Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/prompt_email" />
    </android.support.design.widget.TextInputLayout>

    <!--  Password Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_key"
            android:hint="@string/prompt_password"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/action_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_activity_vertical_margin"
        android:padding="12dp"
        android:text="@string/action_sign_in"/>

    <TextView android:id="@+id/link_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_create_account"
        android:layout_marginTop="@dimen/login_activity_vertical_margin"
        android:layout_marginBottom="@dimen/login_activity_vertical_margin"
        android:gravity="center"
        android:textSize="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/login_activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:layout_weight=".5">

            <in.championswimmer.libsocialbuttons.fabs.FABFacebook
                android:id="@+id/action_loginFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="vertical"
            android:layout_weight=".5">
            <in.championswimmer.libsocialbuttons.fabs.FABGoogleplus
                android:id="@+id/action_loginGoogleplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>